[tool.poetry]
name = "Energy Server"
version = "0.1.0"
description = "server that tells us the total amount of energy metered by a system for a"
authors = ["Srideep Maulik <srideepmaulik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
poetry = "^1.1.4"
dynamodb-json = "^1.3"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
